fix padding per Nick and fix alignment to work for left-side messages

--- a/src/MessagingThreadHistory/MessageMetadata.less
+++ b/src/MessagingThreadHistory/MessageMetadata.less
@@ -44,8 +44,8 @@
 }
 
 .MessageMetadata--ErrorContents {
+  .padding--top--2xs();
   width: 32.9375rem;
-  text-align: right;
 }
 
 .MessageMetadata--Error {
@@ -57,10 +57,12 @@
 
 .MessageMetadata--Error--right {
   justify-content: flex-end;
+  text-align: right;
 }
 
 .MessageMetadata--Error--left {
   justify-content: flex-start;
+  text-align: left;
 }
 
 .MessageMetadata--Error--fullWidth,
